@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="AS3 Commons Reflect">
+<project name="AS3 Commons Metadata">
  
     <skin>
         <groupId>org.apache.tapestry</groupId>
